Func add task to page. Messy.

--- a/src/style.css
+++ b/src/style.css
@@ -59,6 +59,14 @@ main {
     border: solid red;
 }
 
+.titleArea {
+    border: solid blue;
+}
+
+.listArea {
+    border: solid orange;
+}
+
 footer {
     grid-area: foot;
     border: solid green;
