--- a/src/style.css
+++ b/src/style.css
@@ -114,6 +114,11 @@ main {
     grid-area: main;
     background-color: rgb(51, 71, 86);
     color: white;
+    overflow: auto;  
+}
+
+main::-webkit-scrollbar {
+    display: none;
 }
 
 .taskItem {
@@ -130,6 +135,13 @@ main {
     border-radius: 10px;
     padding: 10px;
     cursor: pointer;
+}
+
+.nameArea {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
 }
 
 .editArea {
@@ -153,9 +165,9 @@ main {
     cursor: pointer;
 }
 
-.listArea {
+/* .listArea {
     border: solid blue;
-}
+} */
 
 footer {
     grid-area: foot;
